--- a/teste.css
+++ b/teste.css
@@ -362,3 +362,27 @@ button:hover {
   padding: 8px;
   font-size: 14
 }
+
+.exemplo {
+  height: 295px;
+  background: rgba(51, 51, 51, 0.5);
+  margin: 0 20% 0 20%;
+  border-radius: 58px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0 5%;
+  margin: 0 25%
+}
+
+.finalizada {
+  margin: 8% 0px;
+}
+
+.linha-exemplo {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
